# poo2_unit2_task2_v2021_template

./: CMakeLists.txt  README.md  cppcheck.cpp  generate_zip.sh  global.h  main.cpp  p1.cpp  p1.h  p2.cpp  p2.h  p3.cpp  p3.h  p4.cpp  p4.h  redirect_io.h  run.sh  test_1_1.cpp  test_1_1.in  test_1_2.cpp  test_1_2.in  test_1_3.cpp  test_1_3.in  test_1_4.cpp  test_1_4.in  test_2_1.cpp  test_2_1.in  test_2_2.cpp  test_2_3.cpp  test_2_3.in  test_2_4.cpp  test_2_4.in  test_3_1.cpp  test_3_1.in  test_3_2.cpp  test_3_2.in  test_3_3.cpp  test_3_4.cpp  test_4_1.cpp  test_4_1.in  test_4_2.cpp  (+1 more)
